css/main.css
/* ... */
textarea {
    resize: vertical;
}

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   By: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */

body {
    font: 20px/26px Calibri, Arial, CourierNew;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

/* ===================
    ALL: Orange Theme
   =================== */

.header-container {
    border-bottom: 20px solid #e44d26;
}

.footer-container,
.main aside {
    border-top: 20px solid #0084ff; /*#0079ff;*/
}

.header-container,
.footer-container,
.main aside {
    background: #ff8000; /*#ff7900;*/
}

.title {
    color: white;
}

/* ==============
    MOBILE: Menu
   ============== */

nav ul {
    margin: 0;
    padding: 0;
}

nav a {
    display: block;
    margin-bottom: 10px;
    padding: 15px 0;

    text-align: center;
    text-decoration: none;
    font-weight: bold;

    color: white;
    background: #e44d26;
}

nav a:hover,
nav a:visited {
    color: white;
}

nav a:hover {
    text-decoration: underline;
}

/* ==============
    MOBILE: Main
   ============== */

.main {
    padding: 30px 0;
}

.main article h1 {
    font-size: 50px;
    line-height: 100%;
    font-family: "courier new";
    margin: 10px 10px 10px -5%;
}

@media screen and (max-width: 570px) {
    .main article h1 {
        font-size: 34px;
    }
}

.main article h1 a {
    color: black;
    text-decoration:none;
}

.main article h1 a:hover,.main article h1 a:visited {
    text-decoration: underline;
}

.main article h2 {
    font-size: 22px;
    font-family: "courier new";
}

.main article h3 {
    font-size: 66px;
    line-height: 50px;
    font-family: "courier new";
    margin: 20px 20px 40px 20px;

}
 /*home page labels*/
.main article h4 {
    font-size: 32px;
    line-height: 40px;
    margin: 0px;
    font-family: "courier new";


}
 /*home page project titles*/
.main article h5 {
    font-size: 24px;
    font-family: "courier new";
    margin: 0px 0px 0px 0px;

}

.main aside {
    color: white;
    padding: 0px 5% 10px;
}

.footer-container footer {
    color: white;
    padding: 20px 0;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles zzz
   ========================================================================== */

.punchleft {
    border: 3px solid black;
    float: left;
    margin: 3px 10px 3px -150px;
}

.punchright {
    border: 3px solid black;
    float: right;
    margin: 3px -60px 3px 10px;
    position: relative;
    z-index: 2;
}

.plain-item  p {
    font-size: 18px;
    line-height: 1.1;
    margin: 10px 0 4px 0;
    /*position: relative;*/
}

.pixelpeter-title {
    position: relative;
}

.pixelpeter {
    position: absolute;
    right   : 30px;
    top     : 65px;
    z-index : 9999;
}

.wordbubble {
    position: absolute;
    bottom  : 150px;
    left    : -200px;
}

.wordbubbletext {

    font-family: calibri;
    font-size: 20px;
    color: white;

    line-height:110%;
    margin: -140px 0px 0px 25px;
    width:160px;

}

.wordbubbletext a:link{
    color: gold;
    text-decoration:none;
}

.wordbubbletext a:visited{
    color: gold;
    text-decoration:none;
}

.wordbubbletext a:hover{
    color: gold;
    text-decoration:none;
}

.center-please {
    padding-top: 14px;
    text-align : center;
}

.image-ee-science-gif {
    width: 50%;
    display: inline-block;
    padding-right: 5px;
}

.image-ee-promo {
    width: 42%;
    display: inline-block;
}

.image-ee-napping {
    width: 41%;
    display: inline-block;
    padding-right: 5px;
}

.image-ee-marmar {
    width: 50.5%;
    display: inline-block;
}

.responsive-image {
    width: 100%;
    height: auto;
}

#fadeout {
    transition: opacity 1s;
}

#fadeout:hover {
    opacity: 0;
}

.project-img {
    padding: 0px 10px;
    float: left;
}

.project-item {
    padding-top   : 12px;
    padding-bottom: 12px;
    margin        :  10px 0;

    background-color: #EFEFEF;
    border: 2px solid #DDDDDD;
}

.project-title{
        margin: 0px 0px 0px -5%;
        padding: 5px;
        position:relative;
}

.person-item {
    position:relative;
    padding: 10px 10px 10px 16px;
    margin :  10px 0;

    background-color: #EFEFEF;
    border: 2px solid #DDDDDD;
}

.word-bubble-item {
    position: relative;
    padding: 5px 5px;
    margin:  10px 0;
    text-align: center;
}

.the-press-says {
    padding-left:  16px;
    padding-right: 16px;
}

.person-name-font {
    font-family: 'Courier New', 'Courier', 'Arial';
}

.person-item-cast {
    padding: 10px 10px;
    margin:  10px 0;
    background-color: #ffb649;
    border: 2px solid #DDDDDD;
    position:relative;
}

.person-item-crew {
    padding: 10px 10px;
    margin:  10px 0;
    background-color: #aad9ff;
    border: 2px solid #DDDDDD;
    position:relative;
}

.person-left-side {
    float:left;
    width: 60%;
}

.person-left-side p {
    padding-right: 10px;
    padding-left: 10px;
    margin-top: 0px;
    margin-bottom: 0px;
}

.pixel-portrait img {
    position:absolute;
    left: -55px;
    bottom: 15%;
}

@media screen and (max-width: 570px) {
    .person-item {
        padding: 10px 10px 10px 65px;
    }

    .pixel-portrait img {
        left:-10px;
    }
}

.person-right-side {
    float:left;
    width: 40%;
}

.person-right-side img {
    width: 100%;
    height: auto;
}

.twitter-pixel-logo{
    position: absolute;
    top: 15px;
    right: -25px;
    z-index:1;
}

.dibigong-item {
    position: relative;
    padding: 10px;
    margin:  0 auto;
    width: 90%;
    background-color: transparent;
    border: none;
    text-align: center;
}
/* ... */

